--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 					</div>
 
 						<div class="socmed">
-							<a href="https://www.facebook.com/jmico.policarpio/"><i class="fa-brands fa-facebook"></i></a>
-							<a href="https://www.messenger.com/t/100083855306808/"><i class="fa-brands fa-facebook-messenger"></i></a>
+							<a href="https://www.facebook.com/jmico.policarpio"><i class="fa-brands fa-facebook"></i></a>
+							<a href="https://www.messenger.com/t/100083855306808"><i class="fa-brands fa-facebook-messenger"></i></a>
 							<a href="https://www.instagram.com/jmico.poli/"><i class="fa-brands fa-instagram"></i></a>
 						</div>
 
