--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 									<span class="br"></span>
 
 								<ul>
-									<li>Java</li>
+									<li>Java ()</li>
 									<li>HTML/CSS</li>
 									<li>C#</li>
 								</ul>
